--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,9 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
+    "axios": "^1.7.9",
+    "bson": "^6.10.2",
+    "buffer": "^6.0.3",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
