--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "bson": "^6.10.2",
     "buffer": "^6.0.3",
     "leaflet": "^1.9.4",
+    "mui-file-input": "^6.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
