--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
     "mongodb": "^6.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.7"
   },
