--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "express-rate-limit": "^7.5.1",
     "fs": "^0.0.1-security",
     "mongodb": "^6.10.0",
+    "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.7",
