--- a/client/public/staticwebapp.config.json
+++ b/client/public/staticwebapp.config.json
@@ -1,4 +1,11 @@
 {
+  "routes": [
+    {
+      "route": "/api/*",
+      "allowedRoles": ["anonymous"],
+      "rewrite": "https://mhguessrbackend-ajgxfhgsgac0brg7.polandcentral-01.azurewebsites.net/"
+    }
+  ],
   "navigationFallback": {
     "rewrite": "/index.html",
     "exclude": ["/assets/*", "/images/*", "/favicon.ico"]
